--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     "require": {
         "php": ">=7.2.5",
         "doctrine/annotations": "^1.0|^2.0",
-        "symfony/config": "^4.4|^5.0|^6.0",
-        "symfony/dependency-injection": "^4.4|^5.0|^6.0",
-        "symfony/framework-bundle": "^4.4|^5.0|^6.0",
-        "symfony/http-kernel": "^4.4|^5.0|^6.0"
+        "symfony/config": "^4.4|^5.0|^6.0|^7.0",
+        "symfony/dependency-injection": "^4.4|^5.0|^6.0|^7.0",
+        "symfony/framework-bundle": "^4.4|^5.0|^6.0|^7.0",
+        "symfony/http-kernel": "^4.4|^5.0|^6.0|^7.0"
     },
     "require-dev": {
         "doctrine/dbal": "^2.10|^3.0",
